<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>tutorial</groupId>
    <artifactId>learn</artifactId>
    <packaging>pom</packaging>
    <version>1.0.0-Final</version>
    <name>java</name>

    <modules>
        <module>core</module>
        <module>tests</module>
        <module>codecheckup</module>
        <module>config</module>
        <module>immutable</module>
        <module>kafka</module>
        <module>akka</module>
        <module>datastructures_algorithms</module>
        <module>validation</module>
        <module>performance_and_memory_management</module>
        <module>byte_buddy</module>
        <module>collections</module>
        <module>net</module>
        <module>util</module>
        <module>code_snippets</module>
        <module>jdbi</module>
        <module>dependency_injection</module>
    </modules>

    <developers>
        <developer>
            <name>ahrooran</name>
            <id>ahrooran-r</id>
            <url>https://www.linkedin.com/in/ahrooran</url>
            <email>ahrooran17@gmail.com</email>
            <roles>
                <role>Java Developer</role>
            </roles>
            <timezone>+5:30</timezone>
        </developer>
    </developers>

    <properties>
        <jdk.version>21</jdk.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>${jdk.version}</maven.compiler.source>
        <maven.compiler.target>${jdk.version}</maven.compiler.target>

        <!-- dependency versions -->

        <scala.binary.version>3</scala.binary.version>
        <akka.version>2.8.0</akka.version>

        <elasticsearch-java.version>8.6.2</elasticsearch-java.version>
        <elasticsearch-rest-high-level-client.version>7.17.9</elasticsearch-rest-high-level-client.version>

        <junit.version>5.9.2</junit.version>
        <junit-platform-launcher.version>1.9.2</junit-platform-launcher.version>
        <junit-vintage-engine.version>5.8.2</junit-vintage-engine.version>
        <mockito-junit-jupiter.version>5.1.1</mockito-junit-jupiter.version>

        <fastutil.version>8.5.12</fastutil.version>
        <dsiutils.version>2.7.3</dsiutils.version>
        <eclipse-collections.version>12.0.0.M1</eclipse-collections.version>
        <commons-collections4.version>4.4</commons-collections4.version>
        <commons-io.version>2.12.0</commons-io.version>
        <vavr.version>1.0.0-alpha-4</vavr.version>
        <agrona.version>1.17.1</agrona.version>

        <commons-math3.version>3.6.1</commons-math3.version>
        <commons-lang3.version>3.12.0</commons-lang3.version>
        <commons-codec.version>1.15</commons-codec.version>
        <guava.version>31.1-jre</guava.version>

        <lombok.version>1.18.30</lombok.version>
        <error-prone.version>2.14.0</error-prone.version>
        <byte-buddy.version>1.14.2</byte-buddy.version>

        <apache-httpclient5.version>5.2.1</apache-httpclient5.version>
        <immutables-value.version>2.9.3</immutables-value.version>
        <twitter-hbc-core.version>2.2.0</twitter-hbc-core.version>
        <kafka-clients.version>3.4.0</kafka-clients.version>
        <jmh.version>1.36</jmh.version>
        <slf4j.version>2.0.7</slf4j.version>
        <logback-classic.version>1.4.7</logback-classic.version>

        <gson.version>2.10.1</gson.version>
        <jackson-databind.version>2.15.1</jackson-databind.version>
        <org-json.version>20230227</org-json.version>
        <dsl-json.version>1.10.0</dsl-json.version>
        <moshi.version>1.14.0</moshi.version>
        <jsoniter.version>0.9.23</jsoniter.version>
        <javaassist.version>3.29.2-GA</javaassist.version>

        <jdbi.version>3.38.3</jdbi.version>
        <hikaricp.version>5.0.1</hikaricp.version>
        <postgresql.version>42.6.0</postgresql.version>

        <guice.version>7.0.0</guice.version>
        <governator.version>1.17.13</governator.version>
        <avaje-inject.version>9.3-RC3</avaje-inject.version>
    </properties>

    <dependencies>

        <!--
        Lombok config: https://stackoverflow.com/a/62909509/10582056
        -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback-classic.version}</version>
        </dependency>

    </dependencies>

    <build>

        <plugins>
            <!-- https://www.mojohaus.org/versions/versions-maven-plugin/index.html -->
            <!-- mvn versions:display-plugin-updates -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.15.0</version>
                <configuration>
                    <generateBackupPoms>false</generateBackupPoms>
                </configuration>
            </plugin>

            <!-- mvn clean package -T 2C  - -skipTests -->
            <!-- mvn clean package -DskipTests -T 4 -pl <any_sub_module> -am <== https://stackoverflow.com/a/3899772 -->
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>${jdk.version}</release>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <skipTests>true</skipTests>
                    <parallel>all</parallel>
                    <perCoreThreadCount>true</perCoreThreadCount>
                    <threadCount>2</threadCount>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>./logs</directory>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>

        </plugins>

        <pluginManagement>

            <!-- https://maven.apache.org/plugins/ -->
            <!-- versions updated as of 07-June-2022-->

            <plugins>

                <plugin>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.3.0</version>
                </plugin>

                <!-- added to support junit jupiter -->
                <plugin>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>3.0.0-M7</version>
                </plugin>

                <plugin>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>3.3.0</version>
                </plugin>

                <plugin>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>3.3.0</version>
                </plugin>

                <plugin>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.2.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.2.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.10.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M7</version>
                </plugin>
                <plugin>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.2.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>3.0.0-M1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>3.0.0-M2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>4.0.0-M1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-project-info-reports-plugin</artifactId>
                    <version>3.3.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <repositories>
        <repository>
            <id>projectlombok.org</id>
            <url>https://projectlombok.org/edge-releases</url>
        </repository>
    </repositories>
</project>
